labs/aks/deploy/api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: res-edge
  labels:
    app: api
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      terminationGracePeriodSeconds: 30
      containers:
      - name: app
        image: ghcr.io/cse-labs/res-edge-api:0.20
        imagePullPolicy: Always
        args:
          - --run-automation
          - --git-ops-repo
          - github.com/cse-labs/res-edge-labs
          - --git-ops-branch
          - labs
          - --sleep
          - "60"
        ports:
          - name: http
            containerPort: 8080
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /api/healthz
            port: http
          initialDelaySeconds: 5
          failureThreshold: 10
          periodSeconds: 60
        resources:
          limits:
            memory: 4Gi
            cpu: 4000m
          requests:
            memory: 1024Mi
            cpu: 1000m
